--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: repetier-server # you probably want to 'snapcraft register <name>'
+name: mapero-repetier-server # you probably want to 'snapcraft register <name>'
 base: core20 # the base snap is the execution environment for this snap
 version: '1.2.1' # just for humans, typically '1.2+git' or '1.3.2'
 summary: Inofficial repetier server snap # 79 char long summary
